force-app/main/default/objects/geopointe__User_Usage__c/geopointe__User_Usage__c.object-meta.xml
<CustomObject>
    <description>Track user&apos;s last usage of Geopointe</description>
    <label>Geopointe User Usage</label>
    <nameField>
        <displayFormat>UU-{0}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geopointe Users Usages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>