force-app/main/default/objects/geopointe__User_Usage__c/fields/geopointe__Last_Use__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Last_Use__c</fullName>
    <label>Last Use</label>
    <type>DateTime</type>
</CustomField>