force-app/main/default/objects/geopointe__User_Usage__c/fields/geopointe__Last_Use_Type__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Last_Use_Type__c</fullName>
    <label>Last Use Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Map Tab</fullName>
            </value>
            <value>
                <fullName>Salesforce1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>